[package]
name = "unbounded-spsc"
version = "0.1.7"
authors = ["Shane Pearman <spearman@github.com>"]
license = "Apache-2.0"
description = "An unbounded spsc queue built from `bounded_spsc_queue`s"
repository = "https://github.com/spearman/unbounded-spsc"
readme = "README.md"

[dependencies]
bounded-spsc-queue = "0.4.*"
