[package]
name = "unbounded-spsc"
version = "0.1.8"
authors = ["Shane Pearman <spearman@github.com>"]
license = "Apache-2.0"
description = "An unbounded spsc queue built from `bounded_spsc_queue`s"
repository = "https://github.com/spearman/unbounded-spsc"
readme = "README.md"
edition = "2021"

[dependencies]
spsc-bounded-queue = { version = "0.0.2", git = "https://github.com/crsaracco/spsc-bounded-queue" }
