[package]
name = "unbounded-spsc"
version = "0.2.0"
authors = ["Shane Pearman <spearman@github.com>"]
license = "Apache-2.0"
description = "An unbounded spsc queue built from `bounded_spsc_queue`s"
repository = "https://github.com/spearman/unbounded-spsc"
readme = "README.md"
edition = "2024"

[dependencies]
bounded-spsc-queue = "0.4.*"

[lints.clippy]
single-component-path-imports = "allow"
